# skill-fantasy

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  GDD.md  Gemfile  LICENSE  MVP.md  Makefile  Post-MVP.md  README.md  README.pt-br.md  Tasks.md  app.css  app.js  bootstrap.sh  build.sh  compile_commands.json  docfile  grammar.pro  i686-w64-mingw32.txt  index.html  install-deps.sh  less  local.lua  make.bat  makefile  meson.build  run.bat  setup.js  skfantasy  skfantasy.pro  skfantasy.rb  skill_fantasy  skillfantasy  tasks.md  version.txt  (+1 more)
.circleci/: config.yml
.github/workflows/: build.yml  c-cpp.yml  codeql.yml  deploy.yml  dev.yml  main.yml
.xmake/linux/armv7a/: xmake.conf
.xmake/linux/armv7a/cache/: config  detect  history  toolchain
1st-release/: Makefile  palindrome.pro
1st-release/src/: client.cc  curses_window.cc  curses_window.hh  handlevector.hh  signal.hh
css/: app.css
data/: main.lua  menu_start.txt
docs/: README.md  noise.md
include/: colors.h  common.h  creature.h  draw.h  engine.h  engine.hpp  entity.h  entity.hpp  events.hpp  factories.h  game.h  geom.hpp  level.hpp  map.h  math.hpp  modes.h  move.h  mymath.h  noise.h  noise.hpp  objects.hpp  position.h  skfantasy.h  world.h
include/controller/: curses.hpp
include/model/: engine.hpp  entity.hpp  level.hpp  objects.hpp
include/util/: events.hpp  math.hpp  noise.hpp
include/view/: curses.hpp
js/: app.js  health.js  mobjs.js  noise.js  player.js  point.js  setup.js  view.js  world.js
lib/: engine.rb  entity.rb  geom.rb  level.rb  noise.rb  object.rb  view.rb
oldard1/: colors.c  draw.c  entity.c  entity.h  game.c  main.c  map.c  map.h  noise.c  position.h
oldard2/: colors.c  colors.h  entity.h  game.c  level.c  main.c
oldard3/: engine.c  level.c  main.c  skfantasy.h
ray2/: curses.c  draw.c  engine.c  main.c  map.c  mob.c  release.sh  skfantasy.h
script/: lut.c.py  lut.h.py  obj_to_c.py
scripts/: main.scm
src/: Trie.cxx  Trie.hxx  XorShift.cxx  callbacks.cc  callbacks.hh  chain.c  chain.h  colors.c  colors.cpp  colors.h  common.h  common.hpp  commons.hh  creature.c  creature.h  draw.c  draw.cpp  draw.h  ecs.h  engine.c  engine.cpp  engine.rb  entity.c  entity.cpp  entity.h  entity.hpp  events.cpp  events.hpp  fileio.cc  fileio.hh  game.c  game.cc  game.cpp  game.h  game.hh  game.hpp  gen.cpp  geom.hh  geom.hxx  inventory.hh  (+55 more)
src/android/: AndroidManifest.xml  cleanup.sh  startup.sh
src/android/jni/: CMakeLists.txt  android-main.c
src/android/res/layout/: activity_main.xml
src/android/res/values/: strings.xml  styles.xml
src/android/src/com/rafa21/skfan/: App.java  GameView.java  SkillFantasy.java
src/api/: guile_api.c  guile_api.h
src/common/: game.c  lut.c  lut.h  model.c  model.h  obj_pose.c  render.c  render.h  rng32.h  vec.h
src/controller/: curses.cpp  ncurses.cpp  ncurses.hpp
src/core/: handlevector.hh  signal.hh  trie.cc  trie.hh  xorshift.cc
src/creatures/: bat.c  fire.c  fungi.c  player.c
src/curses/: main.c
src/desktop/: win32-main.c  xmake.lua
src/game/: creature.c  engine.cpp  entity.cpp  entity.h  game.cpp  game.h  game.hh  level.cpp  map.cpp  map.h  noise.cpp  noise.h  object.hh  world.c  world.h  world.hh
src/model/: engine.cpp  entity.cpp  game.cpp  game.hpp  level.cpp  level.hpp  object.hpp
src/modes/: generate.c  play.c  start.c
src/noise/: math.c  math.h  noise.c
src/platform/: keyboard.hh
src/state/: game_state.cc  game_state.hh  gen.cpp  play.cpp  title.cpp
src/system/: fileio.cc  fileio.hh
src/util/: events.cpp  math.cpp  noise.cpp
src/view/: colors.cpp  colors.h  curses.cpp  draw.cpp  draw.h  ncurses.cpp  ncurses.hpp  view.h
subprojects/: pdcurses.wrap
subprojects/packagefiles/pdcurses/: meson.build
test/: noise_test.cpp
tests/: entity_not_null.c  map_not_null.c
